--- a/index.html
+++ b/index.html
@@ -473,7 +473,9 @@
                         <img src="img/i-star-empty.svg" alt="" />
                       </div>
                     </div>
-                    <h3 class="hotel-name">aona suerte sigui&oacute; siempre</h3>
+                    <h3 class="hotel-name">
+                      aona suerte sigui&oacute; siempre
+                    </h3>
                     <p class="hotel-location">Барселона, Испания</p>
                     <button class="btn hotel-button">Номера</button>
                   </div>
@@ -481,17 +483,221 @@
               </article>
               <li class="hotel-card hotel-card-background flex">
                 <!--Дополнительная карточка в списке-->
-                <a href="#" class="hotel-more"
-                  >Посмотреть все варианты</a
-                >
+                <a href="#" class="hotel-more">Посмотреть все варианты</a>
               </li>
             </ul>
+          </div>
+        </section>
+
+        <section class="main-want__tour container">
+          <h2 class="section-title want_tour-h2">Хочу тур</h2>
+          <div class="want__tour__container">
+            <div class="want__tour-wrapper">
+              <form
+                action="https://jsonplaceholder.typicode.com/posts"
+                method="POST"
+                class="want__tour-form flex"
+              >
+                <div class="form-item">
+                  <span class="form-item-title">Город вылета</span>
+                  <select name="city" class="select-style form-city">
+                    <option value="SPB" class="form-city-name">
+                      Санкт-Петербург
+                    </option>
+                    <option value="MSK" class="form-city-name">Москва</option>
+                    <option value="NSK" class="form-city-name">
+                      Новосибирск
+                    </option>
+                    <option value="RND" class="form-city-name">
+                      Ростов-на-Дону
+                    </option>
+                  </select>
+                </div>
+                <div class="form-item">
+                  <span class="form-item-title">Страна</span>
+                  <select name="country" class="select-style form-want__tour-country">
+                    <option value="AVS" class="form-country-name">
+                      Австралия
+                    </option>
+                    <option value="CEZ" class="form-country-name">Чехия</option>
+                    <option value="USA" class="form-country-name">США</option>
+                    <option value="GB" class="form-country-name">
+                      Великобритания
+                    </option>
+                  </select>
+                </div>
+                <div class="form-item">
+                  <span class="form-item-title">Дата прибытия</span>
+                  <input name="date-arrival" type="date" class="form-date" value="2021-11-15" />
+                </div>
+                <div class="form-item">
+                  <span class="form-item-title">Ночей</span>
+                  <input
+                    type="number"
+                    name="nights"
+                    min="1"
+                    max="14"
+                    class="input-number-style form-nights"
+                    value="6"
+                  />
+                </div>
+                <div class="form-item">
+                  <span class="form-item-title">Туристы</span>
+                  <input
+                    type="number"
+                    name="amount__people"
+                    min="1"
+                    max="6"
+                    class="input-number-style form-amount__people"
+                    value="2"
+                  />
+                </div>
+                <button type="submit" class="btn form-btn">Найти</button>
+              </form>
+            </div>
+          </div>
+        </section>
+
+        <section class="main-contacts">
+          <h2 class="section-title contacts-title">Контакты</h2>
+          <div class="contacts-container">
+            <address class="contacts-content-container flex">
+              <div class="contacts--content-left flex">
+                <div class="contacts-item-wrapper">
+                  <div class="contacts--title-wrapper">
+                    <div class="contacts--title-wrapper">
+                      <span class="contacts--title">Адрес</span>
+                    </div>
+                  </div>
+                  <div class="contacts--descr-wrapper">
+                    <span class="contacts--descr">
+                      Москва, улица Юности, дом 5 строение 4, офис 2
+                    </span>
+                  </div>
+                </div>
+
+                <div class="contacts-item-wrapper">
+                  <div class="contacts--title-wrapper">
+                    <span class="contacts--title">Телефоны</span>
+                  </div>
+                  <div class="contacts--descr-wrapper">
+                    <a href="tel:+74995356434" class="contacts--link"
+                      >+7 (499) 535-64-34</a
+                    >
+                    <a href="tel:+74950050544" class="contacts--link"
+                      >+7 (495) 005-05-44</a
+                    >
+                  </div>
+                </div>
+
+                <div class="contacts-item-wrapper">
+                  <div class="contacts--title-wrapper">
+                    <span class="contacts--title">E-mail</span>
+                  </div>
+                  <div class="contacts--descr-wrapper">
+                    <a href="mailto:lg.oona@mail.ru" class="contacts--link"
+                      >lg.oona@mail.ru</a
+                    >
+                    <span class="contacts--descr-gray"
+                      >по вопросам бронирования</span
+                    >
+                    <a href="mailto:hotels.ln@mail.ru" class="contacts--link"
+                      >hotels.ln@mail.ru</a
+                    >
+                    <span class="contacts--descr-gray"
+                      >по вопросам сотрудничества</span
+                    >
+                  </div>
+                </div>
+
+                <div class="contacts-item-wrapper contacts-item-last">
+                  <div class="contacts--title-wrapper">
+                    <span class="contacts--title">График</span>
+                  </div>
+
+                  <div class="contacts--descr-wrapper">
+                    <span class="contacts--descr">
+                      Понедельник - пятница, <br />
+                      с 10:00 до 19:00
+                    </span>
+                  </div>
+                </div>
+
+                <button class="btn contacts-btn">Построить маршрут</button>
+              </div>
+              <div class="contacts--content-right">
+                <img
+                  src="img/contacts-img.png"
+                  alt="Ресепшн"
+                  class="contacts--image-right"
+                />
+              </div>
+            </address>
           </div>
         </section>
       </main>
 
       <!--Footer starts-->
-      <footer></footer>
+      <footer class="footer-wrapper">
+        <div class="footer-container flex">
+          <div class="footer-left flex">
+            <p class="footer-p">
+              © 2012-2020 Управляющая компания Объединенной сети «Лагуна Хотелс»
+            </p>
+
+            <p class="footer-p">
+              Представленная на сайте информация носит справочный характер
+              и не является публичной офертой
+            </p>
+
+            <a href="#" class="contacts--link">Пользовательское соглашение</a>
+          </div>
+
+          <div class="footer-center flex">
+            <address class="footer-address">
+              11710, улица Юности, дом 5 строение 4, офис 2
+            </address>
+            <div class="footer-center-phones flex">
+              <a href="tel:+74995356434" class="contacts--link"
+                >+7 (499) 535-64-34</a
+              >
+              <a href="tel:+74950050544" class="contacts--link"
+                >+7 (495) 005-05-44</a
+              >
+            </div>
+            <div class="footer-center-email flex">
+              <a href="mailto:lg.oona@mail.ru" class="contacts--link"
+                >lg.oona@mail.ru</a
+              >
+              <a href="mailto:hotels.ln@mail.ru" class="contacts--link"
+                >hotels.ln@mail.ru</a
+              >
+            </div>
+          </div>
+
+          <div class="footer-social">
+            <div class="footer-icons">
+              <ul class="footer-icons--list list-reset">
+                <li class="footer-list--item">
+                  <a href="#" class="footer-item-link link-tripadv"></a>
+                </li>
+                <li class="footer-list--item">
+                  <a href="#" class="footer-item-link link-twitter"></a>
+                </li>
+                <li class="footer-list--item">
+                  <a href="#" class="footer-item-link link-fb"></a>
+                </li>
+                <li class="footer-list--item">
+                  <a href="#" class="footer-item-link link-vk"></a>
+                </li>
+                <li class="footer-list--item">
+                  <a href="#" class="footer-item-link link-inst"></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
